--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "name": "next"
       }
     ],
-    "types": ["node"],
+    "types": ["node", "react", "react-dom"],
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
